--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:3000/
+REACT_APP_API_URL=https://accounts.spotify.com/pt-BR/login?continue=https:%2F%2Faccounts.spotify.com%2Fauthorize%3Fscope%3Duser-read-private%2Buser-read-email%2Buser-read-playback-state%2Buser-read-recently-played%2Buser-top-read%2Bplaylist-read-private%26response_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flistifybackend.herokuapp.com%252Fcallback%26state%3DgG2SXCgHg6x6LV1V%26client_id%3D4ba5b08fc8ef49b199802929f4146e75%26show_dialog%3Dtrue
+
