--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_URI=
-APP_URL=https://accounts.spotify.com/pt-BR/login?continue=https:%2F%2Faccounts.spotify.com%2Fauthorize%3Fscope%3Duser-read-private%2Buser-read-email%2Buser-read-playback-state%2Buser-read-recently-played%2Buser-top-read%2Bplaylist-read-private%26response_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Ftwodevs-codify.herokuapp.com%252Fcallback%26state%3DO99U2s7T2CRsXy3x%26client_id%3D19dc144b838d49b89085e1539270373e%26show_dialog%3Dtrue
+APP_URL=https://accounts.spotify.com/pt-BR/login?continue=https:%2F%2Faccounts.spotify.com%2Fauthorize%3Fscope%3Duser-read-private%2Buser-read-email%2Buser-read-playback-state%2Buser-read-recently-played%2Buser-top-read%2Bplaylist-read-private%26response_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flistify.herokuapp.com%252Fcallback%26state%3DO99U2s7T2CRsXy3x%26client_id%3D19dc144b838d49b89085e1539270373e%26show_dialog%3Dtrue
